feat: 完善v1.0优化需求文档及阶段开发计划
- 新增14天开发计划文档(Day01-Day14)
- 新增用户与成员姓名一致性设计
- 新增家谱树当前用户标识优化
- 更新README项目名为'传承谱'
- 更新.gitignore添加target/目录

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,19 @@ npm-debug.log*
 
 # opencode
 .opencode/
+
+# Backend config (sensitive)
+kin-legacy-backend/src/main/resources/application-dev.yml
+kin-legacy-backend/src/main/resources/application-prod.yml
+
+# Java compile output
+target/
+*.class
+*.jar
+*.war
+*.ear
+
+# Maven
+.mvn/
+mvnw
+mvnw.cmd
