feat: 更新项目名为'慎重追远'
- 项目名改为'慎重追远'（出自论语'慎终追远，民德归厚矣'）
- 更新README.md文档
- 更新pom.xml和package.json中的项目描述

--- a/kin-legacy-admin/package.json
+++ b/kin-legacy-admin/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "kin-legacy-admin",
+  "name": "shenzhongzhuiyuan-admin",
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "description": "慎重追远 - 家谱管理后台",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
