--- a/kin-legacy-backend/src/main/resources/application.yml
+++ b/kin-legacy-backend/src/main/resources/application.yml
@@ -7,8 +7,15 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/family_tree?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false
-    username: root
-    password: 123456
+    username: ${spring.datasource.username}
+    password: ${spring.datasource.password}
+  profiles:
+    active: dev
+
+wechat:
+  miniapp:
+    appid: ${wechat.miniapp.appid}
+    secret: ${wechat.miniapp.secret}
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
