feat: 实现JWT认证基础架构
- 引入JJWT依赖，搭建认证基础架构
- 实现Token生成、解析、验证功能
- 创建认证拦截器和@RequireLogin、@RequireRole注解
- 改造登录接口，返回JWT Token和refreshToken
- 添加Token刷新接口 /api/auth/refresh
- 改造所有Controller添加登录验证
- 改造前端request添加Token携带和401自动刷新
- 前端路由守卫限制admin角色访问

--- a/kin-legacy-backend/src/main/resources/application.yml
+++ b/kin-legacy-backend/src/main/resources/application.yml
@@ -17,6 +17,13 @@ wechat:
     appid: ${wechat.miniapp.appid}
     secret: ${wechat.miniapp.secret}
 
+jwt:
+  secret: ${jwt.secret}
+  expiration: 86400000
+  refresh-expiration: 604800000
+  header: Authorization
+  prefix: "Bearer "
+
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   type-aliases-package: com.kin.family.entity
