chore: 添加敏感文件到gitignore
- 排除 manifest.json 和 project.config.json
- 取消跟踪敏感配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@ npm-debug.log*
 kin-legacy-backend/src/main/resources/application-dev.yml
 kin-legacy-backend/src/main/resources/application-prod.yml
 
+# Mini-program config (sensitive)
+kin-legacy-mp/manifest.json
+kin-legacy-mp/project.config.json
+
 # Java compile output
 target/
 *.class
