refactor: 按规范重构后端项目结构
- 包结构调整: enums->constant, 新增interceptor/vo/converter包
- DTO规范化命名: Request/Response后缀统一为DTO
- 枚举规范化: 使用@EnumValue和@JsonValue注解保持数据库兼容
- 添加Javadoc类注释
- 修复管理员权限验证问题
- 更新数据库连接配置

--- a/kin-legacy-backend/src/main/resources/application.yml
+++ b/kin-legacy-backend/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: family-tree
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/family_tree?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false
+    url: jdbc:mysql://localhost:3306/family_tree?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false&allowPublicKeyRetrieval=true
     username: ${spring.datasource.username}
     password: ${spring.datasource.password}
   profiles:
@@ -36,7 +36,7 @@ mybatis-plus:
       logic-delete-field: deleted
       logic-delete-value: 1
       logic-not-delete-value: 0
-  type-enums-package: com.kin.family.enums
+  type-enums-package: com.kin.family.constant
 
 logging:
   level:
